--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "redux": "^3.0.0",
     "redux-simple-router": "^0.0.10",
     "redux-thunk": "^1.0.0",
-    "yargs": "^3.18.0"
+    "yargs": "^3.18.0",
+    "web3": "^0.15.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
