--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux-simple-router": "^0.0.10",
     "redux-thunk": "^1.0.0",
     "yargs": "^3.18.0",
-    "web3": "^0.15.0"
+    "web3": "^0.15.0",
+    "json-loader": "^0.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
